working on drive with us form

--- a/mtm6201/landing-page/index.html
+++ b/mtm6201/landing-page/index.html
@@ -39,12 +39,14 @@
                 </div>
 
                 <div class="body cf">
-                  <input type="text" id="input-fname" placeholder="First name">
-                  <input type="text" id="input-lname" placeholder="Last name">
-                  <input type="email" id="input-email" placeholder="Email address">
-                  <input type="tel" id="telNo" placeholder="Phone number">
-                  <input type="checkbox" id="agreement" name="agreement" value="agreement">
-                  <label for="agreement"> I agree to dash terms</label>
+                <ul></ul>
+                 <li><input type="text" id="input-fname" placeholder="First name"></li>
+                 <li><input type="text" id="input-lname" placeholder="Last name"></li>
+                 <li><input type="email" id="input-email" placeholder="Email Address"></li>
+                 <li><input type="tel" id="telNo" placeholder="Phone number"></li> 
+                </ul>
+                <input type="checkbox" id="agreement" name="agreement" value="agreement">
+                <label class="agreetext" for="agreement"> I agree to dash terms</label>
                 </div> 
 
                 <button Class="drive" type="button">DRIVE WITH US</button>
