fix drive text can't center problem

--- a/mtm6201/landing-page/index.html
+++ b/mtm6201/landing-page/index.html
@@ -46,6 +46,7 @@
 
             <!-- There are many DIV elements in the table for convenient typesetting in CSS -->
             <form class="cf">
+                <!-- f1 -->
                 <div class="f">
                     <h2>Apply Now</h2>
                     <h3>Enter your info below.</h3>
@@ -53,23 +54,33 @@
                 <!-- Each input is set to a separate module.
                      Check Box is a separate module
                      Link is a separate module -->
+
+                <!-- f2 -->
                 <div class="f"><input type="text" id="input-fname" placeholder="First name"></div>
+                <!-- f3 -->
                 <div class="f"><input type="text" id="input-lname" placeholder="Last name"></div>
+                <!-- f4 -->
                 <div class="f"><input type="email" id="input-email" placeholder="Email Address"></div>
+                <!-- f5 -->
                 <div class="f"><input type="tel" id="telNo" placeholder="Phone number"></div>
 
-                <!-- Declare checkbox div -->
+                <!-- Declare checkbox div 
+                    f6-->
                 <div class="f checkline">
                     <input class="checkbox" type="checkbox" id="agreement" name="agreement1">
                     <label class="agreetext" for="agreement"><span></span> I agree to dash terms</label>
                 </div>
 
-                <!-- Declare button div -->
-                <div class="f"><button Class="cf drive" type="button">DRIVE WITH US</button></div>
-
-                <!-- Declare link div  -->
+                <!-- Declare button div 
+                    f7-->
                 <div class="f">
-                    <p>Already applied?<a class="cf link" href="aplication.html">Check your application status here</a>
+                    <button Class="drive" id="drive" type="button">DRIVE WITH US</button>
+                </div>
+
+                <!-- Declare link div  
+                    f8-->
+                <div class="f">
+                    <p>Already applied?<a class="link" href="aplication.html">Check your application status here</a>
                     </p>
                 </div>
 
