--- a/mtm6201/mtm6201-prototype-master/home.html
+++ b/mtm6201/mtm6201-prototype-master/home.html
@@ -17,12 +17,17 @@
 </head>
 
 <body>
-        <header>
-            <div class="nav-size">
-            <div class="block logo">
-                <img class="logo" src="images/logo.png" alt="logo">
+        <header class="nav">
+            <div>
+                <img class="block logo" src="images/logo.png" alt="logo">
             </div>
-            <div class="block nav">
+
+            <div class="block login">
+                <input class="input-search" type="text" placeholder="Search" name="search">
+                <button class="btn search" type="submit"><i class="fas fa-search"></i></button>
+            </div>
+
+            <div class="block">
                 <ul>
                     <li>
                         <a href="home.html" class="home">Home</a>
@@ -38,71 +43,75 @@
                     </li>
                 </ul>
             </div>
-            <div class="bolck login">
-                <input class="search" type="text" placeholder="Search" name="search">
-                <button class="btn search" type="submit"><i class="fas fa-search"></i></button>
-            </div>
-        </div>
         </header>
 
         <main>
             
             <section class="banner">
                 <div class="b">
-                    <img class="b-img" src="images/banner.jpg" alt="banner">
+                    <img class="b b-img" src="images/banner.jpg" alt="banner">
                 </div>
                 <div class="b">
                     <h1>Summer Offer! </h1>
                     <p>Try new flavors <br>
                         new products 25% OFF!!</p>
                 </div>
-                <div class="btn">
+                <div class="b btn">
                     <input type="submit" class="btn order" value="Order Now">
                 </div>
             </section>
 
             <div class="container">
-            <section class="featured">
+
+            <section>
                 <h2>FEATURED</h2>
+                <div class="featured">
                 <div class="iteam">
-                    <img class="treats" src="images/treats.png" alt="treats">
+                    <img class="iteam treats" src="images/treats.png" alt="treats">
                 </div>
                 <div class="iteam">
-                    <img  class="b-cake" src="images/Bcake.png" alt="brithday cake">
+                    <img  class="iteam b-cake" src="images/Bcake.png" alt="brithday cake">
                 </div>
                 <div class="iteam">
-                    <img  class="spooning" src="images/spooning.png" alt="spooning">
+                    <img  class="iteam spooning" src="images/spooning.png" alt="spooning">
                 </div>
                 <div class="iteam">
-                    <img class="cone" src="images/cone.png" alt="cone">
+                    <img class="iteam cone" src="images/cone.png" alt="cone">
                 </div>
                 <div class="iteam">
-                    <img class="sundae" src="images/sundae.png" alt="sundae">
+                    <img class="iteam sundae" src="images/sundae.png" alt="sundae">
                 </div>
                 <div class="iteam">
-                    <img class="cone2" src="images/cone2.png" alt="cone2">
+                    <img class="iteam cone2" src="images/cone2.png" alt="cone2">
                 </div>
+            </div>
             </section>
 
             <section class="trynew">
                 <h2>TRY OUR NEW PRODUCT</h2>
-                <div class="new">
-                    <img src="images/try-new1.png" alt="try-new1">
+                <div class="try">
+                <div>
+                    <img class="new new1" src="images/try-new1.png" alt="try-new1">
                 </div>
-                <div class="new">
+                <div class="new yogurt">
                     <h1>Yogurt Ice Cream</h1>
-                    <p>Hold in the palm, Sweet in the heart</p>
-                    <input type="submit" class="btn order" value="Order Now">
+                    <p>Hold in the palm, <br>
+                        Sweet in the heart</p>
+                    <div class="btn">
+                    <input type="submit" class="btn order" value="Order Now"></div>
                 </div>
-                <div class="new">
+                <div class="new chocolate">
                     <h1>The Infinite Chocolate</h1>
                     <p>
-                        Breyers. Tastes so good… Still good for you.
+                        Breyers. Tastes so good… <br>
+                        Still good for you.
                     </p>
-                    <input type="submit" class="btn order" value="Order Now">
+                    <div class="btn">
+                    <input type="submit" class="btn order" value="Order Now"></div>
                 </div>
-                <div class="new">
-                    <img src="images/try-new2.png" alt="try-new2">
+                <div>
+                    <img class="new new2" src="images/try-new2.png" alt="try-new2">
+                </div>
                 </div>
             </section>
         </div>
@@ -112,6 +121,7 @@
 
     <footer>
         <div class="container">
+            <div class="f">
             <div class="fset">
                 <h3>Business hours</h3>
                 <p>Mon-Fri 11-11</p>
@@ -122,27 +132,30 @@
                 <input class="search" type="text" placeholder="Search" name="search">
                 <button class="btn go" type="submit">GO</button>
             </div>
-            <div class="fset icons">
-                <div class="block">
-                    <img src="images/icons/facebook.svg" alt="facebook" />
-                </div>
+        </div>
 
-                <div class="block">
-                    <img src="images/icons/instagram.svg" alt="instagram" />
-                </div>
-
-                <div class="block">
-                    <img src="images/icons/twitter.svg" alt="twitter" />
-                </div>
-
-                <div class="block">
-                    <img src="images/icons/linkedin.svg" alt="linkedin" />
-                </div>
+        <div class="icons">
+            <div class="block">
+                <img src="images/icons/facebook.svg" alt="facebook" />
             </div>
 
-            <div>
-                <p class="copyright">&copy;Copyright MOODICECREAM, 2021</p>
+            <div class="block">
+                <img src="images/icons/instagram.svg" alt="instagram" />
             </div>
+
+            <div class="block">
+                <img src="images/icons/twitter.svg" alt="twitter" />
+            </div>
+
+            <div class="block">
+                <img src="images/icons/linkedin.svg" alt="linkedin" />
+            </div>
+        </div>
+        
+        <div>
+            <p class="copyright">&copy;Copyright MOODICECREAM, 2021</p>
+        </div>
+
         </div>
     </footer>
 
