fix all problems

--- a/mtm6201/mtm6201-prototype-master/contact.html
+++ b/mtm6201/mtm6201-prototype-master/contact.html
@@ -45,7 +45,8 @@
         </div>
     </header>
 
-    <main class="m">
+    <main class="main">
+        <div class="m">
         <div class="box box-1">
 
             <!-- There are many DIV elements in the table for convenient typesetting in CSS -->
