--- a/mtm6201/Bootstrap_This.html
+++ b/mtm6201/Bootstrap_This.html
@@ -21,8 +21,10 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
     -->
+
+    <div class="container m-auto mb-lg-5">
     <!-- **************************nav***************************************** -->
-    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #d3863e;">
+    <nav class="navbar navbar-expand-lg navbar-light mb-4" style="background-color: #b6a279;">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">Bootstrap</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
@@ -47,115 +49,87 @@
         </div>
       </div>
     </nav>
-    <!-- ****************************************** -->
-    <div class="accordion" id="accordionPanelsStayOpenExample">
-      <!-- first item -- Introduction Of Bootstrap-->
-      <div class="accordion-item">
-        <h2 class="accordion-header" id="panelsStayOpen-headingOne">
-          <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
-            Introduction Of Bootstrap
-          </button>
-        </h2>
-        <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show" aria-labelledby="panelsStayOpen-headingOne">
-          <div class="accordion-body">
-            <strong>What is Bootstrap?</strong> Bootstrap is the most popular CSS Framework for developing responsive and mobile-first websites.
-            Bootstrap 5 is the newest version of Bootstrap.<br>Quickly design and customize responsive mobile-first sites with Bootstrap, the world’s most popular front-end open source toolkit, featuring Sass variables and mixins, responsive grid system, extensive prebuilt components, and powerful JavaScript plugins.<br>
-          </div>
-        </div>
-      </div>
-
-      <!-- Second item -- Benefits-->
-      <div class="accordion-item">
-        <h2 class="accordion-header" id="panelsStayOpen-headingTwo">
-          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo">
-            Benefits
-          </button>
-        </h2>
-        <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingTwo">
-          <div class="accordion-body">
-            <strong>Most Benefits of Bootstrap.</strong>
+    
+    <!-- ********************Bootstrap Tutorial********************** -->
+    <div class="container rounded bg-secondary text-white py-lg-4 m-auto ">
+      <div class="jumbotron">
+        <h1 class="text-center">Bootstrap Tutorial</h1>      
+        <p><strong>What is Bootstrap?</strong> Bootstrap is the most popular CSS Framework for developing responsive and mobile-first websites.
+          Bootstrap 5 is the newest version of Bootstrap.<br><hr> Design and customize responsive mobile-first sites with Bootstrap, the world’s most popular front-end open source toolkit, featuring Sass variables and mixins, responsive grid system, extensive prebuilt components, and powerful JavaScript plugins.<br></p>
+          <button type="button" class="btn btn-light btn-lg m-3">Read more</button>
+      </div><!-- end jumbotron -->        
+    </div><!-- end container -->
+    
+<!-- ********************Bootstrap Benefits********************** -->
+      <h1 class="text-center m-4">Most Benefits of Bootstrap</h1>
+      <div class="container px-lg-3">
             <ol class="list-group list-group-numbered">
-              <li class="list-group-item"><strong>Across devices, across browsers:</strong> Compatible with all modern browsers.</li>
-              <li class="list-group-item"><strong>Responsive Layout:</strong>Bootstrap provides a responsive, mobile-first streaming grid system. It can adjust the page to the user's screen size to make it look good on all sizes.</li>
-              <li class="list-group-item"><strong>CSS modular:</strong>Many CSS classes are pre-defined in bootstrap. When using the class, you can directly assign the corresponding class name, such as text-left,text-align,.table, etc  </li>
+              <li class="list-group-item p-3 border bg-light"><strong>Across devices, across browsers:</strong> Compatible with all modern browsers.</li>
+              <li class="list-group-item "><strong>Responsive Layout:</strong>Bootstrap provides a responsive, mobile-first streaming grid system. It can adjust the page to the user's screen size to make it look good on all sizes.</li>
+              <li class="list-group-item p-3 border bg-light"><strong>CSS modular:</strong>Many CSS classes are pre-defined in bootstrap. When using the class, you can directly assign the corresponding class name, such as text-left,text-align,.table, etc  </li>
               <li class="list-group-item"><strong>Built-in JavaScript plug-in:</strong>Bootstrap relies on JQuery because it provides a variety of useful JQuery plugins that allow developers to implement common effects on the WEB.</li>
-              <li class="list-group-item"><strong>Rich components:</strong>Bootstrap provides a variety of useful components, including navigation, tabs, toolbars, buttons, etc.</li>
-            </ol>
-          </div>
-        </div>
+              <li class="list-group-item p-3 border bg-light"><strong>Rich components:</strong>Bootstrap provides a variety of useful components, including navigation, tabs, toolbars, buttons, etc.</li>
       </div>
 
-      <!-- Third item -- Components -->
-      <div class="accordion-item">
-        <h2 class="accordion-header" id="panelsStayOpen-headingThree">
-          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false" aria-controls="panelsStayOpen-collapseThree">
-            Components
-          </button>
-        </h2>
-        <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingThree">
-          <div class="accordion-body">
-            <!-- add grid container-->
-            <div class="container">
-              <!-- #1 row -->
-              <div class="row">
-                <div class="col">
-                  Name
-                </div>
-                <div class="col">
-                  Introduction
-                </div>
-                <div class="col">
-                  How to use
-                </div>
-              </div><!-- end #1 row -->
-              <hr>
-              <!-- #2 row -->
-              <div class="row">
-                <div class="col">
-                  Accordion
-                </div>
-                <div class="col">
-                  Build vertically collapsing accordions in combination with our Collapse JavaScript plugin.
-                </div>
-                <div class="col">
-                  The accordion uses collapse internally to make it collapsible. To render an accordion that’s expanded, add the .open class on the .accordion.
-                </div>
-              </div><!-- end #2 row -->
-              <hr>
-
-              <!-- #3 row -->
-              <div class="row">
-                <div class="col">
-                  Collapse
-                </div>
-                <div class="col">
-                  Toggle the visibility of content across your project with a few classes and our JavaScript plugins.
-                </div>
-                <div class="col">
-                  The collapse JavaScript plugin is used to show and hide content. Buttons or anchors are used as triggers that are mapped to specific elements you toggle. Collapsing an element will animate the height from its current value to 0. Given how CSS handles animations, you cannot use padding on a .collapse element. Instead, use the class as an independent wrapping element.
-                </div>
-              </div><!-- end #3 row -->
-              <hr>
-
-               <!-- #4 row -->
-               <div class="row">
-                <div class="col">
-                  List group
-                </div>
-                <div class="col">
-                  List groups are a flexible and powerful component for displaying a series of content. Modify and extend them to support just about any content within.
-                </div>
-                <div class="col">
-                  <strong>Disabled items</strong> Add .disabled to a .list-group-item to make it appear disabled. Note that some elements with .disabled will also require custom JavaScript to fully disable their click events (e.g., links).
-                </div>
-              </div><!-- end #4 row -->
-              <hr>
-
-            </div><!--end grid container -->
-
+      <!-- ********************Components********************** -->      
+      <h1 class="text-center m-4 mb-4">Components</h1>
+      <!-- add grid container-->
+      <div class="container px-4 border bg-light">
+        <!-- #1 row -->
+        <div class="row">
+          <div class="col">
+            Name
           </div>
-        </div>
-      </div>
+          <div class="col">
+            Introduction
+          </div>
+          <div class="col">
+            How to use
+          </div>
+        </div><!-- end #1 row -->
+        <hr>
+        <!-- #2 row -->
+        <div class="row">
+          <div class="col">
+            Accordion
+          </div>
+          <div class="col">
+            Build vertically collapsing accordions in combination with our Collapse JavaScript plugin.
+          </div>
+          <div class="col">
+            The accordion uses collapse internally to make it collapsible. To render an accordion that’s expanded, add the .open class on the .accordion.
+          </div>
+        </div><!-- end #2 row -->
+        <hr>
+
+        <!-- #3 row -->
+        <div class="row">
+          <div class="col">
+            Collapse
+          </div>
+          <div class="col">
+            Toggle the visibility of content across your project with a few classes and our JavaScript plugins.
+          </div>
+          <div class="col">
+            The collapse JavaScript plugin is used to show and hide content. Buttons or anchors are used as triggers that are mapped to specific elements you toggle. Collapsing an element will animate the height from its current value to 0. Given how CSS handles animations, you cannot use padding on a .collapse element. Instead, use the class as an independent wrapping element.
+          </div>
+        </div><!-- end #3 row -->
+        <hr>
+
+         <!-- #4 row -->
+         <div class="row">
+          <div class="col">
+            List group
+          </div>
+          <div class="col">
+            List groups are a flexible and powerful component for displaying a series of content. Modify and extend them to support just about any content within.
+          </div>
+          <div class="col">
+            <strong>Disabled items</strong> Add .disabled to a .list-group-item to make it appear disabled. Note that some elements with .disabled will also require custom JavaScript to fully disable their click events (e.g., links).
+          </div>
+        </div><!-- end #4 row -->
+
+      </div><!--end grid container -->
 
     </div>
   </body>
