--- a/mtm6201/bootstrap-this/index.html
+++ b/mtm6201/bootstrap-this/index.html
@@ -75,7 +75,7 @@
           <p>Design and customize responsive mobile-first sites with Bootstrap, the world’s most popular front-end
             open source toolkit, featuring Sass variables and mixins, responsive grid system, extensive prebuilt
             components, and powerful JavaScript plugins.</p>
-          <h1 class="text-center">How to ues</h1>
+          <h1 class="text-center">How to use</h1>
           <p><strong>CSS</strong> Copy-paste the stylesheet &#60;link&#62; into your &#60;head&#62; before all other
             stylesheets to load our CSS.</p>
 
