--- a/mtm6201/bootstrap-this/index.html
+++ b/mtm6201/bootstrap-this/index.html
@@ -84,7 +84,7 @@
             rel=&#34;stylesheet&#34;
             integrity=&#34;sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC&#34;
             crossorigin=&#34;anonymous&#34;&#62;</p>
-          <a href="https://getbootstrap.com/docs/5.0/getting-started/introduction/" type="button" class="btn btn-light btn-lg m-3">Read more</a>
+          <link href="https://getbootstrap.com/docs/5.0/getting-started/introduction/" type="button" class="btn btn-light btn-lg m-3">Read more</link>
         </div><!-- end jumbotron -->
       </div><!-- end container -->
     </div>
