--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <title>Xiaoyu Ding Portfolio</title>
 </head>
 <body>
-    
+    <a href="about.html" class="home">Home</a>
     
 </body>
 </html>
