--- a/index.html
+++ b/index.html
@@ -1,22 +1,117 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Required meta tags -->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- Clear style -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
         integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;700&display=swap" rel="stylesheet">
-        <script src="https://kit.fontawesome.com/931c767dbc.js" crossorigin="anonymous"></script>
+
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
+    <!-- Google Map -->
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;700&display=swap" rel="stylesheet">
+
+    <!--  -->
+    <script src="https://kit.fontawesome.com/931c767dbc.js" crossorigin="anonymous"></script>
+
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
+
+    <!-- own style -->
     <link rel="stylesheet" href="css/base.css">
+
+
     <title>Xiaoyu Ding Portfolio</title>
 </head>
+
 <body>
+    <header>
+        <!-- block 1  logo image-->
+        <div>
+            <img class="block logo" src="images/logo.png" alt="logo">
+        </div>
+
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="#">Navbar</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav">
+                  <a class="nav-link active" aria-current="page" href="#">Home</a>
+                  <a class="nav-link" href="#">Features</a>
+                  <a class="nav-link" href="#">Pricing</a>
+                  <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+                </div>
+              </div>
+            </div>
+          </nav>
+
+    </header>
+
+    <main>
+        <!-- grid box for main page-->
+        <div>
+
+            <!-- box 1: self infor-->
+            <div>
+
+            </div><!-- end box 1-->
+
+            <!-- box 2: dowload resume-->
+            <div>
+            </div><!-- end box 2-->
+
+            <!-- box 3: go to diffent part -->
+            <div>
+            </div><!-- end box 3-->
+
+        </div><!-- end grid box for main page-->
+
+    </main>
+
+    <footer>
+        <!-- set footer container style -->
+        <div class="container">
+
+          <!-- copyright -->
+          <div>
+            <p class="copyright">&copy;Copyright MOODICECREAM, 2021</p>
+        </div>
+        <!-- end copyright -->
+
+        <!-- icons divided into four block-->
+        <div class="icons">
+            <div class="block">
+                <img src="images/icons/facebook.svg" alt="facebook" />
+            </div>
+
+            <div class="block">
+                <img src="images/icons/instagram.svg" alt="instagram" />
+            </div>
+
+            <div class="block">
+                <img src="images/icons/twitter.svg" alt="twitter" />
+            </div>
+
+            <div class="block">
+                <img src="images/icons/linkedin.svg" alt="linkedin" />
+            </div>
+        </div><!-- end icons -->   
+    </div><!-- container -->
+    </footer>
+
     
-    <a href="about.html" class="home">Home</a>
-    
+    <!-- Option 1: Bootstrap Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous">
+    </script>
 </body>
 </html>
